fixed the layout issue

--- a/app/assets/stylesheets/pages/_project.scss
+++ b/app/assets/stylesheets/pages/_project.scss
@@ -1,18 +1,16 @@
 .project-page {
-  height: calc(100vh - 70px);
+  max-height: calc(100vh - 70px);
+  background-color: #FFFFFF;
 }
 
-.project-grid {
-  height: 100vh;
-  grid-template-rows: 10% 40% 50% 10%;
-  grid-template-columns: 30% 70%;
-  background-color: #FFFFFF;
-  color: #040f0f;
-  margin: 0px 10% 0px 10% !important;
-  /* NEW */
-  /* min-height: 0; */
-  // min-width: 0;
-  // max-height: calc(100vh - 70px - 100px);
+.title {
+  p {
+    font-size: 30px;
+  }
+}
+
+.name {
+  font-size: 30px;
 }
 
 .project-details-grid-item-1 {
@@ -25,43 +23,15 @@
   grid-column: 1 / span 1 ;
 }
 
+
 .details {
-  .status-o{
-    padding-left: 5px;
-    width: 20%;
-    background-color: green;
-    border-radius: 25px;
-    margin-right: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    .open  {
-      margin-bottom: 0px;
-      color: white;
-       font-size: 20px;
-        }
-      }
-      .status-c{
-        padding-left: 5px;
-        width: 30%;
-        background-color: red;
-        border-radius: 25px;
-        margin-right: 5px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        .closed {
-          margin-bottom: 0px;
-          color: white;
-          font-size: 20px;
-        }
-      }
-    }
+
+}
 
 .task-container {
-
   display: grid;
 }
+
 .tasks-grid-item-2 {
   overflow-y: hidden;
   height: 100% !important;
@@ -119,8 +89,8 @@
   height: 350px;
 }
 
-.target-container {
-  padding-right: 150px;
+.targets {
+  padding: 10px;
 
 }
 
@@ -135,9 +105,4 @@
 }
 
 
-.title {
 
-  h3 {
-    font-size: 30px;
-  }
-}
